[gd_scene load_steps=10 format=2]

[ext_resource path="res://Custom Fonts/vcr/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Cenas/UI/Scripts_UI/ctrl_mundo1.gd" type="Script" id=2]
[ext_resource path="res://transition/ColorRect.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.168627, 0.560784, 0.74902, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.027451, 0.25098, 0.360784, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=4]
draw_center = false

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.113725, 0.490196, 0.670588, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
draw_center = false

[node name="ctrl_mundo1" type="Node"]
script = ExtResource( 2 )

[node name="CenterContainer2" type="CenterContainer" parent="."]
margin_left = 290.0
margin_top = 227.0
margin_right = 990.0
margin_bottom = 492.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="CenterContainer2"]
margin_right = 700.0
margin_bottom = 265.0
custom_constants/vseparation = 25
custom_constants/hseparation = 25
columns = 5

[node name="btn_1" type="Button" parent="CenterContainer2/GridContainer"]
margin_right = 120.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 120 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 1 )
text = "1"
expand_icon = true

[node name="btn_2" type="Button" parent="CenterContainer2/GridContainer"]
margin_left = 145.0
margin_right = 265.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 120 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 1 )
disabled = true
text = "2"
expand_icon = true

[node name="btn_3" type="Button" parent="CenterContainer2/GridContainer"]
margin_left = 290.0
margin_right = 410.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 120 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 1 )
disabled = true
text = "3"
expand_icon = true

[node name="btn_4" type="Button" parent="CenterContainer2/GridContainer"]
margin_left = 435.0
margin_right = 555.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 120 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 1 )
disabled = true
text = "4"
expand_icon = true

[node name="btn_5" type="Button" parent="CenterContainer2/GridContainer"]
margin_left = 580.0
margin_right = 700.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 120 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 1 )
disabled = true
text = "5"
expand_icon = true

[node name="btn_6" type="Button" parent="CenterContainer2/GridContainer"]
margin_top = 145.0
margin_right = 120.0
margin_bottom = 265.0
rect_min_size = Vector2( 120, 120 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 1 )
disabled = true
text = "6"
expand_icon = true

[node name="btn_7" type="Button" parent="CenterContainer2/GridContainer"]
margin_left = 145.0
margin_top = 145.0
margin_right = 265.0
margin_bottom = 265.0
rect_min_size = Vector2( 120, 120 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 1 )
disabled = true
text = "7"
expand_icon = true

[node name="btn_8" type="Button" parent="CenterContainer2/GridContainer"]
margin_left = 290.0
margin_top = 145.0
margin_right = 410.0
margin_bottom = 265.0
rect_min_size = Vector2( 120, 120 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 1 )
disabled = true
text = "8"
expand_icon = true

[node name="btn_9" type="Button" parent="CenterContainer2/GridContainer"]
margin_left = 435.0
margin_top = 145.0
margin_right = 555.0
margin_bottom = 265.0
rect_min_size = Vector2( 120, 120 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 1 )
disabled = true
text = "9"
expand_icon = true

[node name="btn_10" type="Button" parent="CenterContainer2/GridContainer"]
margin_left = 580.0
margin_top = 145.0
margin_right = 700.0
margin_bottom = 265.0
rect_min_size = Vector2( 120, 120 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 1 )
disabled = true
text = "10"
expand_icon = true

[node name="voltar_menumapas" type="Button" parent="."]
margin_right = 141.0
margin_bottom = 76.0
text = "Voltar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" parent="." instance=ExtResource( 3 )]
visible = false
[connection signal="pressed" from="CenterContainer2/GridContainer/btn_1" to="." method="_on_btn_1_pressed"]
[connection signal="pressed" from="CenterContainer2/GridContainer/btn_2" to="." method="_on_btn_2_pressed"]
[connection signal="pressed" from="CenterContainer2/GridContainer/btn_3" to="." method="_on_btn_3_pressed"]
[connection signal="pressed" from="CenterContainer2/GridContainer/btn_4" to="." method="_on_btn_4_pressed"]
[connection signal="pressed" from="CenterContainer2/GridContainer/btn_5" to="." method="_on_btn_5_pressed"]
[connection signal="pressed" from="CenterContainer2/GridContainer/btn_6" to="." method="_on_btn_6_pressed"]
[connection signal="pressed" from="CenterContainer2/GridContainer/btn_7" to="." method="_on_btn_7_pressed"]
[connection signal="pressed" from="CenterContainer2/GridContainer/btn_8" to="." method="_on_btn_8_pressed"]
[connection signal="pressed" from="CenterContainer2/GridContainer/btn_9" to="." method="_on_btn_9_pressed"]
[connection signal="pressed" from="CenterContainer2/GridContainer/btn_10" to="." method="_on_btn_10_pressed"]
[connection signal="pressed" from="voltar_menumapas" to="." method="_on_voltar_menumapas_pressed"]
